# Edge-Node-Control-Plane

./: CMakeLists.txt  README.md  docker-compose.yml
.github/workflows/: docker-image.yml
control-plane/: .dockerignore.txt  CMakeLists.txt  Dockerfile
control-plane/include/: config.hpp  http_server.hpp  node.hpp  node_registry.hpp  scheduler.hpp  type.hpp
control-plane/include/api/: handlers.hpp  serialization.hpp  validation.hpp
control-plane/src/: http_server.cpp  node_registry.cpp
control-plane/src/api/: handlers.cpp  serialization.cpp  validation.cpp
control-plane/tests/: phase1_tests.cpp  test_script.py
node-agent/: Dockerfile  client.go  config.go  go.mod  main.go  node_agent.go  node_agent_test.go  types.go
